2012-02-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/2000*.c:
	  More tests from gcc.

2012-02-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20000402-1.c:
	  Disable test since unsigned long long is not yet fully supported.
	* support/regression/tests/gcc-torture-execute-20000314-1.c:
	  Silence warning.

2012-02-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/2000*.c:
	  More tests from gcc.

2012-02-26 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ds390/spec.mk:
	  simulation timeout icreased to 40s due to
	  gcc-torture-execute-20090113-1 test failure on
	  x86_64-w64-mingw32 and sparc64-unknown-netbsd platforms
	* doc/README.txt: added gbz80 to supported targets,
	  explanation of sdcc run time libraries licensing

2012-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/mcs51/compiler.h:
	  Update for SDCC -> __SDCC rename.
	* support/regression/tests/gcc-torture-execute-pr49161.c,
	  support/regression/tests/gcc-torture-execute-pr49039.c,
	  support/regression/tests/gcc-torture-execute-pr48809.c,
	  support/regression/tests/gcc-torture-execute-pr48973-1.c,
	  support/regression/tests/gcc-torture-execute-pr48973-2.c:
	  Disable tests for all gcc older than 5.0.
	* doc/sdccman.lyx:
	  Document feature macro rename.

2012-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c (genAssign): fixed bug #3463343
	* support/regression/tests/gcc-torture-execute-string-opt-5.c:
	  reenabled for ds390
	* src/ds390/gen.c (genPlus, genMinus): fix bug #3486541
	* support/regression/tests/gcc-torture-execute-pr20527-1.c:
	  reenabled for ds390

2012-02-26 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: documented support for 16f720/16f721

2012-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
